Updated Comparison notebook, used to confirm algorithm still fully functional after PEP8 updates.

--- a/Decision_Tree_Comparison.ipynb
+++ b/Decision_Tree_Comparison.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Model Imports\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from decision_tree import Node, Classifier\n",
+    "from decision_tree import Classifier\n",
     "\n",
     "# Model Evaluation Imports\n",
     "from sklearn.metrics import accuracy_score"
@@ -99,28 +99,20 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Accuracy for Scikit-Learn Decision Tree: 0.9181286549707602\n",
-      "Accuracy for Kenneth Barrett's Decision Tree Algorithm: 0.9473684210526315\n"
-     ]
+     "name": "stdout",
+     "text": "Accuracy for Scikit-Learn Decision Tree: 0.9064327485380117\nAccuracy for Kenneth Barrett's Decision Tree Algorithm: 0.9181286549707602\n"
     }
    ],
    "source": [
     "print('Accuracy for Scikit-Learn Decision Tree:', accuracy_score(y_test, scikit_learn_y_pred))\n",
     "print(\"Accuracy for Kenneth Barrett's Decision Tree Algorithm:\", accuracy_score(y_test, kenneths_y_pred))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -139,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
