Adding Jupyter Notebook comparing my classifier to Scikit-learn

--- a/Decision_Tree_Comparison.ipynb
+++ b/Decision_Tree_Comparison.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_breast_cancer"
+    "from sklearn.datasets import load_wine"
    ]
   },
   {
@@ -36,9 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cancer = load_breast_cancer()\n",
-    "features = cancer.data\n",
-    "target = cancer.target"
+    "wine = load_wine()\n",
+    "features = wine.data\n",
+    "target = wine.target"
    ]
   },
   {
@@ -106,11 +106,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Accuracy for Scikit-Learn Decision Tree: 0.9064327485380117\nAccuracy for Kenneth Barrett's Decision Tree Algorithm: 0.9181286549707602\n"
+     "text": "Accuracy for Scikit-Learn's Decision Tree: 0.8518518518518519\nAccuracy for Kenneth Barrett's Decision Tree Algorithm: 0.9074074074074074\n"
     }
    ],
    "source": [
-    "print('Accuracy for Scikit-Learn Decision Tree:', accuracy_score(y_test, scikit_learn_y_pred))\n",
+    "print(\"Accuracy for Scikit-Learn's Decision Tree:\", accuracy_score(y_test, scikit_learn_y_pred))\n",
     "print(\"Accuracy for Kenneth Barrett's Decision Tree Algorithm:\", accuracy_score(y_test, kenneths_y_pred))"
    ]
   }
